recursion.lessons.recursion.koch.Koch.scala.error
Koch:26: error: ';' expected but ')' found.
		snowside(levels=levels-1,length))}
                                                ^